kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mocljudem
  labels:
    app: mocljudem
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mocljudem
  template:
    metadata:
      labels:
        app: mocljudem
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: mocljudem-storage
          emptyDir: {}
      containers:
        - name: mocljudem
          image: mocljudem
          volumeMounts:
            - name: mocljudem-storage
              mountPath: /storage
          command:
            - gunicorn
            - mocljudem.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
            - --workers
            - "1"
            - --threads
            - "3"
            - --timeout
            - "90"
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 400Mi
              cpu: 200m
            limits:
              memory: 800Mi
              cpu: 400m
        - name: mocljudem-nginx
          image: nginx:alpine
          volumeMounts:
            - name: mocljudem-storage
              mountPath: /usr/share/nginx/html
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 50Mi
              cpu: 50m
