kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mocljudem
spec:
  selector:
    app: mocljudem
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: mocljudem-nginx
spec:
  selector:
    app: mocljudem
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
